# ADBFileDriver

./: .gitignore  CMakeLists.txt  build.ps1  check_dll_arch.ps1  check_portable_device_reg.ps1  debug_adb.ps1  register_portable_device.bat  test_com_reg.ps1  test_component.ps1
.clinerules/: Rule ADBFileDriver.md
1C/Release/Win64/: ADBFileDriver_Win64.exp  ADBFileDriver_Win64.lib
1C/Release/Win64/Release/: ADBFileDriver_Win64.exp
ADBFileDriver/: ADBFileDriver.cpp  ADBFileDriver.def  ADBFileDriver.h  adb_api.h  stdafx.h
Docs/: ADBFileDriver_Описание_для_1С.md  NativeAPI_Руководство.md  Драйвер_ADB_для_1С.md  Отладка_ADBFileDriver.md  Применение DebugView.md  СписокФайлов_Detailed.md  Требования к логированию.txt  Эксплуатация_ADBFileDriver.md
Docs/Пример innNative/: innNative.vcxproj
bundle/: MANIFEST.xml
